[package]
name = "bevy_prototype_schedule_states"
version = "0.1.0-beta.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.6"

[[example]]
name = "example"
path = "examples/example.rs"

[[example]]
name = "nested"
path = "examples/nested.rs"