[package]
name = "bevy_prototype_schedule_states"
categories = ["game-engines"]
description = "Bevy plugin for states as schedules"
keywords = ["game", "bevy"]
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Mike Hsu <mike.hsu@gmail.com"]
readme = "README.md"
homepage = "https://github.com/hymm/bevy_prototype_schedule_states"
repository = "https://github.com/hymm/bevy_prototype_schedule_states"
documentation = "https://docs.rs/hymm/bevy_prototype_schedule_states"

[dependencies]
bevy = { version = "0.6", default-features = false}

[dev-dependencies]
bevy = "0.6"

[[example]]
name = "example"
path = "examples/example.rs"

[[example]]
name = "nested"
path = "examples/nested.rs"